--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "start": "vite"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.78.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@tanstack/router-plugin": "^1.78.3",
     "@vitejs/plugin-react": "^4.3.2",
-    "vite": "^5.4.8"
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "vite": "^5.4.8",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.78.3",
