--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "vite": "^5.4.8",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^5.1.0"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.78.3",
