--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@tanstack/react-router": "^1.78.3",
+    "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.78.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
