--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite-tsconfig-paths": "^5.1.0"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-router": "^1.78.3",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.78.3",
