--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-router": "^1.78.3",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.78.3",
+    "date-fns": "^4.1.0",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "react": "^18.3.1",
