--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.78.3",
@@ -18,6 +20,7 @@
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "gh-pages": "^6.2.0",
     "vite": "^5.4.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^5.1.0"
