--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "youtube-creator-dashboard",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://zaya1101.github.io/youtube-creator-dashboard",
   "scripts": {
     "typecheck": "tsc --noEmit",
     "dev": "vite --port=3001",
